# sentinel-sre-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: demo-video-script.md  live-model-integration.md
scripts/: cloud-run-deploy.sh
src/sentinel/: __init__.py  cli.py  scenarios.py  server.py  tracing.py
src/sentinel/agent/: __init__.py  adk_agent.py  core.py  debate.py  prompts.py
src/sentinel/evaluation/: __init__.py  llm_judge.py
src/sentinel/mcp/: __init__.py  arize_client.py  phoenix_client.py
src/sentinel/static/: index.html
src/sentinel/tools/: __init__.py  actions.py  analyze.py  base.py  phoenix_tools.py  query.py  self_introspect.py
tests/: __init__.py  test_phoenix_client.py  test_scenarios.py  test_tools.py
